# tortoise-pathway

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: example.py  run_example.py
example/myapp/: __init__.py  config.py  models.py
tests/: __init__.py  conftest.py  models.py  test_migration_manager.py  test_schema_diff_cross_app.py  test_schema_diff_fields.py  test_schema_diff_indexes.py  test_schema_diff_models.py  test_state.py
tests/e2e/: conftest.py
tests/e2e/test_applied_migrations/: __init__.py  test_applied_migrations_app.py
tests/e2e/test_model_changes/: __init__.py  models.py  test_model_changes_app.py
tests/e2e/test_no_migrations/: models.py  test_no_migrations_app.py
tests/operations/: __init__.py  test_add_column.py  test_add_field.py  test_add_index.py  test_alter_field.py  test_create_table.py  test_drop_index.py  test_drop_table.py  test_rename_field.py  test_rename_model.py  test_run_sql.py
tests/test_migrations/: __init__.py  conftest.py
tests/test_operations/: test_add_column.py  test_add_index.py  test_create_table.py  test_drop_index.py  test_drop_table.py  test_schema_diff.py  test_schema_diff_indexes.py
tortoise_pathway/: autogenerate.py  cli.py  cliutil.py  field_ext.py  generators.py  index_ext.py  integrator.py  migration.py  migration_manager.py  models.py  schema_change.py  schema_diff.py  schema_differ.py  state.py
tortoise_pathway/migrations/: __init__.py
tortoise_pathway/operations/: __init__.py  add_field.py  add_index.py  alter_field.py  create_model.py  drop_model.py  field_ext.py  operation.py  rename_field.py  rename_model.py  sql.py  utils.py
tortoise_pathway/schema/: base.py  postgres.py  sqlite.py
(+15 files in other folders)
